Fix: add missing border

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body {
   min-height: 784px;
   flex-shrink: 0;
   border-radius: 24px;
+  border: 1px solid #8e8e8e;
   display: flex;
   flex-direction: column;
   overflow: hidden;
